src/objects/HPP_T_C_Observation__c.object
<CustomObject>
    <description>The HPP Compliance Observation aid for use by T&amp;C Scheme Managers and Compliance</description>
    <fields>
        <fullName>AIP_Date_Time_of_call__c</fullName>
        <description>Enter the date and time the Agreement in principle was completed</description>
        <label>AIP Date &amp; Time of call</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AIP_Eligibility_Personal_Finance_info__c</fullName>
        <inlineHelpText>AIP in two parts - Eligibility/ Personal Finance info</inlineHelpText>
        <label>AIP - Eligibility/ Personal Finance info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIP_Reference_Number__c</fullName>
        <inlineHelpText>Enter the Customers AIP number</inlineHelpText>
        <label>AIP Reference Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIP_decision_show_understanding__c</fullName>
        <inlineHelpText>Generates AIP decision - show understanding where the request is declined or confirm the customer is happy to proceed to application if appropriate.</inlineHelpText>
        <label>AIP decision - show understanding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affordability__c</fullName>
        <description>Confirm affordability with customer</description>
        <inlineHelpText>Confirm affordability with customer</inlineHelpText>
        <label>Affordability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agree_E_mail_notification_If_applicable__c</fullName>
        <inlineHelpText>Agree with the customer that e-mail notification is acceptable (If appropriate)</inlineHelpText>
        <label>Agree E-mail notification  If applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_relevant_information_recorded__c</fullName>
        <description>Has all the relevant information for the HPP Application been recorded?</description>
        <inlineHelpText>Has all the relevant information for the HPP Application been recorded?</inlineHelpText>
        <label>All relevant information recorded</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_questions_on_product_please_contact__c</fullName>
        <inlineHelpText>If there are any questions on the product please do not hesitate to contact me?</inlineHelpText>
        <label>Any questions on product please contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With learning points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Date_time_of_call__c</fullName>
        <description>Please enter the date and time of the application call observed</description>
        <inlineHelpText>Please enter the date and time of the application call observed (if applicable)</inlineHelpText>
        <label>Application Date &amp; time of call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Reference_Number__c</fullName>
        <inlineHelpText>Please enter the HPp Application reference number</inlineHelpText>
        <label>Application Reference Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_form_Posted__c</fullName>
        <inlineHelpText>Print off application form and confirm with the customer that this will be posted to them to sign and return along with any other documentation required for the Application e.g. bank Statements, Passport etc.</inlineHelpText>
        <label>Application form Posted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_form_completed_correctly__c</fullName>
        <inlineHelpText>Confirmation that the HPP Application form has been completed correctly from the information supplied by the customer</inlineHelpText>
        <label>Application form completed correctly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_all_qualifying_questions__c</fullName>
        <inlineHelpText>Ask all qualifying questions</inlineHelpText>
        <label>Ask all qualifying questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefits_fully_explained__c</fullName>
        <inlineHelpText>Did the seller fully explain the benefits of the product to the customer?</inlineHelpText>
        <label>Benefits fully explained?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Card_Personalise_Sale__c</fullName>
        <inlineHelpText>Did the seller personalise the close of the interview and go through contact details for any questions throughout the application process.  Customer to confirm that business card is held?</inlineHelpText>
        <label>Business Card/Personalise Sale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Recorded_Disclaimer__c</fullName>
        <inlineHelpText>Did the seller clearly explain that the call would be recorded for training and monitoring purposes</inlineHelpText>
        <label>Call Recorded Disclaimer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_greeting__c</fullName>
        <description>Customer given the option of booking for a face to face at branch or continue.  Confirmation received that customer is happy with interview elements and time and is O.K. to proceed?</description>
        <inlineHelpText>Appropriate greeting, including that call will be monitored &amp; recorded:  Interview elements/time discussed: ok to proceed?</inlineHelpText>
        <label>Call Greeting &amp; Call Monitored</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clear_and_confident_on_the_call__c</fullName>
        <inlineHelpText>Did the seller sound clear and confident during the call with the customer?</inlineHelpText>
        <label>Clear and confident on the call?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closing_wording__c</fullName>
        <inlineHelpText>Closing wording, explain the next steps i.e.credit search, underwriting, survey, offer and completion</inlineHelpText>
        <label>Closing wording</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments1__c</fullName>
        <description>Comments field</description>
        <label>Comments1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments2__c</fullName>
        <label>Comments2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_10__c</fullName>
        <label>Comments 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_11__c</fullName>
        <label>Comments 11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_12__c</fullName>
        <label>Comments 12</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copmments_36__c</fullName>
        <label>Copmments 36</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Scoring_Further_undewriting__c</fullName>
        <inlineHelpText>Stress to the customer that this agreement is subject to credit scoring and further underwriting</inlineHelpText>
        <label>Credit Scoring/Further undewriting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criteria_Met__c</fullName>
        <description>Seller establishes if the customer meets the criteria for the HPP product</description>
        <inlineHelpText>Seller establishes if the customer meets the criteria for the HPP product</inlineHelpText>
        <label>Criteria Met?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Understanding_IDD__c</fullName>
        <inlineHelpText>Check Customer understanding of the Inituial Disclosure Document</inlineHelpText>
        <label>Customer Understanding - IDD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_name__c</fullName>
        <description>Enter the HPP Applicants name</description>
        <label>HPP Applicant name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_understanding_Risk_Features__c</fullName>
        <inlineHelpText>Clarified customer understanding by use of examples - Risks &amp; features document</inlineHelpText>
        <label>Customer understanding Risk &amp; Features</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_seller_ask_for_referral_business__c</fullName>
        <inlineHelpText>Did the seller ask the customer for any potential referral business?</inlineHelpText>
        <label>Did the seller ask for referral business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_seller_close_the_sale__c</fullName>
        <inlineHelpText>Did the seller close the sales correctly?</inlineHelpText>
        <label>Did the seller close the sale?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_seller_interrupt_or_talk_over__c</fullName>
        <inlineHelpText>Did the seller interrupt the customer of talk over them during the call?</inlineHelpText>
        <label>Did the seller interrupt or talk over?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_seller_overcome_any_objections__c</fullName>
        <inlineHelpText>Did the seller overcome any of the customers objections?</inlineHelpText>
        <label>Did the seller overcome any objections?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_seller_overcome_objections__c</fullName>
        <inlineHelpText>Did the seller overcome the customers objections?</inlineHelpText>
        <label>Did the seller overcome objections?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documentation_requirements_explained__c</fullName>
        <inlineHelpText>Did the Seller explain the documentation requirements correctly to the customer?</inlineHelpText>
        <label>Documentation requirements explained?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ensure_IDD_R_F_IS_etc__c</fullName>
        <inlineHelpText>Ensure that the IDD, risks and features, proof of ID/address (KYC) &amp; tarfiif checklists and HPP information booklet prepared</inlineHelpText>
        <label>Ensure IDD R &amp; F IS etc.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explain_Ijara_Diminishing_Musharaka__c</fullName>
        <inlineHelpText>Seller explains concept of Ijara &amp; Diminishing Musharaka, rental and acquisition payment</inlineHelpText>
        <label>Explain Ijara &amp; Diminishing Musharaka</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explain_Use_of_Base_rate_and_rental__c</fullName>
        <inlineHelpText>Seller explains use of Base rate and how rental (Occupancy)is calculated</inlineHelpText>
        <label>Explain Use of Base rate and rental</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explained_how_the_Product_works__c</fullName>
        <inlineHelpText>Did the seller explain clearly to the customer how the product works?</inlineHelpText>
        <label>Explained how the Product works?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explains_Buildings_Insurance__c</fullName>
        <description>Explains Buiildings Insurance relationship</description>
        <inlineHelpText>Explains need for Buiildings Insurance</inlineHelpText>
        <label>Explains Buildings Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explains_Product_Options_Standard_Fixed__c</fullName>
        <inlineHelpText>Explains Product /rate Options Standard/Fixed Has the seller discussed whether the deposit can be increased?</inlineHelpText>
        <label>Explains Product Options Standard/Fixed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explains_fees_from_Tariff_List__c</fullName>
        <inlineHelpText>Explains the administration fee, valuation fee applicable, SDLT, legal fees (Bank &amp; Customers), CHAPS using reference to the current Tariff list</inlineHelpText>
        <label>Explains fees from Tariff List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explanation_of_products_Sharia_complianc__c</fullName>
        <inlineHelpText>Did the seller clearly explain the Sharia aspect of the the product to the customer and the difference between conventional mortgages?</inlineHelpText>
        <label>Explanation- products Sharia compliance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explicit_Consent_to_hold_Data__c</fullName>
        <inlineHelpText>Customer gives explicit consent to hold data</inlineHelpText>
        <label>Explicit Consent to hold Data</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friendly_Polite_and_welcoming__c</fullName>
        <inlineHelpText>Was the seller friendly, polite and welcoming during the call?</inlineHelpText>
        <label>Friendly, Polite and welcoming?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HPP_BTL_Process_explained_correctly__c</fullName>
        <inlineHelpText>Was the whole HPP/BTL process explained correctly?</inlineHelpText>
        <label>HPP/BTL Process explained correctly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HPP_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please select the opportunity that is linked to this record</description>
        <inlineHelpText>Please select the opportunity that is linked to this record</inlineHelpText>
        <label>HPP Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>HPP_T_C_Observation_Phone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HPP_Observation_Number__c</fullName>
        <displayFormat>{YY}{MM}-{0}</displayFormat>
        <label>HPP Observation Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>HPP_Seller_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HPP Seller name</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>HPP_T_C_Observation_Phone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HPP_Sharia_Compliant__c</fullName>
        <label>HPP Sharia Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With learning points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identify_all_sales_opportunities__c</fullName>
        <inlineHelpText>Did the seller identify all sales opportunities?</inlineHelpText>
        <label>Identify all sales opportunities?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identify_all_selling_opportunities__c</fullName>
        <inlineHelpText>Did the Seller identify all sales opportunities on the call i.e.cross sales for LTS/savings etc</inlineHelpText>
        <label>Identify all selling opportunities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicative_Quote__c</fullName>
        <description>HPP Website, complete calculator and inform customer of outcomes - indicative quote only</description>
        <inlineHelpText>HPP Website, complete calculator and inform customer of outcomes - indicative quote only</inlineHelpText>
        <label>Indicative Quote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Disclosure_Document__c</fullName>
        <inlineHelpText>Initial Disclosure Document</inlineHelpText>
        <label>Initial Disclosure Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_Seller__c</fullName>
        <description>This Is the location of the salesperson doing the HPp Application</description>
        <label>Location of Seller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BDM</fullName>
                </value>
                <value>
                    <fullName>Head Office Seller</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Intermediary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lump_Sum_ERC_Options__c</fullName>
        <inlineHelpText>Seller explains availability of lump sum payments and ERC (where applicable for Fixed Product) and options to reduce term or payments</inlineHelpText>
        <label>Lump Sum / ERC Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>